# hairpin-extraction-tvcg

./: .gitignore  CMakeLists.txt  README.md  fix_vortex_point_ids.py
src/contour_splitting/: CMakeLists.txt  Contour_Splitting.cpp
src/extract_hairpins/: CMakeLists.txt  Extract_Hairpins.cpp
src/region_growing/: CMakeLists.txt  Region_Growing.cpp
